# frankly_bootloader_examples

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yaml
boards/eduart_l431kb_can/franklyboot_eduart_l431kb/: Makefile  STM32L431KBUX_FLASH.ld
boards/eduart_l431kb_can/franklyboot_eduart_l431kb/Core/Inc/: bootloader_api.h  device_defines.h
boards/eduart_l431kb_can/franklyboot_eduart_l431kb/Core/Src/: bootloader_api.cpp  main.c
boards/eduart_l431kb_can/franklyboot_eduart_l431kb/Core/Startup/: startup.S
boards/eduart_l431kb_can/franklyboot_eduart_l431kb/Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l431xx.h
boards/rp2040_pico/example_app_pico/: CMakeLists.txt  README.md  rp2040_app.ld
boards/rp2040_pico/example_app_pico/Core/Src/: main.c
boards/rp2040_pico/franklyboot_pico/: CMakeLists.txt  LED_BEHAVIOR.md  MIGRATION_NOTES.md  Makefile  README.md  memmap.ld  memmap_pico.ld  memmap_pico_ram.ld  rp2040.ld
boards/rp2040_pico/franklyboot_pico/Core/Inc/: bootloader_api.h  device_defines.h  tusb_config.h
boards/rp2040_pico/franklyboot_pico/Core/Src/: bootloader_api.cpp  bootloader_api_complex.cpp  main.c  usb_descriptors.c
boards/rp2040_pico/franklyboot_pico/Core/Startup/: boot2.S  boot2_generic.S  startup.S
boards/stm_nucleo_f303k8/example_app_f303k8/: Makefile  STM32F303K8TX_FLASH.ld
boards/stm_nucleo_f303k8/example_app_f303k8/Core/Inc/: main.h  stm32f3xx_hal_conf.h
boards/stm_nucleo_f303k8/example_app_f303k8/Core/Src/: main.c  stm32f3xx_hal_msp.c
boards/stm_nucleo_f303k8/franklyboot_f303k8/: Makefile  STM32F303K8TX_FLASH.ld
boards/stm_nucleo_f303k8/franklyboot_f303k8/Core/Inc/: bootloader_api.h  device_defines.h
boards/stm_nucleo_f303k8/franklyboot_f303k8/Core/Src/: bootloader_api.cpp  main.c
boards/stm_nucleo_g431rb/example_app_g431rb/: .cproject  Makefile  STM32G431RBTX_FLASH.ld  example_app_g431rb.ioc  example_app_g431rb.launch
boards/stm_nucleo_g431rb/example_app_g431rb/Core/Inc/: stm32g4xx_hal_conf.h
boards/stm_nucleo_g431rb/example_app_g431rb/Core/Src/: main.c  stm32g4xx_hal_msp.c
boards/stm_nucleo_g431rb/franklyboot_g431rb/: Makefile  STM32G431RBTX_FLASH.ld
boards/stm_nucleo_g431rb/franklyboot_g431rb/Core/Inc/: device_defines.h
boards/stm_nucleo_g431rb/franklyboot_g431rb/Core/Src/: bootloader_api.cpp  main.c  syscalls.c
make/: build.mk  toolchain.mk
nucleo_g431rb/: CMakeLists.txt  Makefile
nucleo_g431rb/Core/Src/: bootloader_api.cpp
stm_nucleo_g431rb/: Makefile  STM32G431RBTX_FLASH.ld
stm_nucleo_g431rb/Core/Inc/: bootloader_api.h  device_defines.h
stm_nucleo_g431rb/Core/Src/: bootloader_api.cpp  main.c
stm_nucleo_g431rb/example_app_g431rb/: .mxproject  .project  Makefile  STM32G431RBTX_FLASH.ld
stm_nucleo_g431rb/franklyboot_g431rb/: Makefile
stm_nucleo_g431rb/franklyboot_g431rb/Core/Inc/: bootloader_api.h
